back3.output
Grammar

    0 $accept: axiom $end

    1 axiom: exprSeq

    2 $@1: ε

    3 exprSeq: form $@1 r_exprSeq

    4 r_exprSeq: exprSeq
    5          | ε

    6 exprSeqOpt: exprSeq
    7           | ε

    8 form: expression
    9     | '(' SETQ IDENTIF expression ')'
   10     | '(' SETF IDENTIF expression ')'
   11     | '(' PRINT STRING ')'
   12     | '(' PRINT expression ')'
   13     | '(' PRINC STRING ')'
   14     | '(' PRINC expression ')'
   15     | '(' PROGN exprSeqOpt ')'
   16     | '(' MAIN ')'
   17     | '(' IDENTIF ')'

   18 $@2: ε

   19 form: '(' DEFUN MAIN $@2 '(' ')' exprSeqOpt ')'

   20 $@3: ε

   21 $@4: ε

   22 form: '(' LOOP WHILE $@3 expression $@4 DO exprSeqOpt ')'
   23     | '(' ifHead form ')'

   24 $@5: ε

   25 form: '(' ifHead form $@5 form ')'

   26 ifHead: IF expression

   27 expression: operand
   28           | '(' '+' expression expression ')'
   29           | '(' '-' expression expression ')'
   30           | '(' '*' expression expression ')'
   31           | '(' '/' expression expression ')'
   32           | '(' MOD expression expression ')'
   33           | '(' AND expression expression ')'
   34           | '(' OR expression expression ')'
   35           | '(' NOT expression ')'
   36           | '(' '<' expression expression ')'
   37           | '(' LE expression expression ')'
   38           | '(' '>' expression expression ')'
   39           | '(' GE expression expression ')'
   40           | '(' '=' expression expression ')'
   41           | '(' EQ expression expression ')'
   42           | '(' NE expression expression ')'
   43           | '(' '-' expression ')'

   44 operand: IDENTIF
   45        | number

   46 number: NUMBER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 10 11 12 13 14 15 16 17 19 22 23 25 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    ')' (41) 9 10 11 12 13 14 15 16 17 19 22 23 25 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    '*' (42) 30
    '+' (43) 28
    '-' (45) 29 43
    '/' (47) 31
    '<' (60) 36
    '=' (61) 40
    '>' (62) 38
    error (256)
    NUMBER (258) 46
    IDENTIF (259) 9 10 17 44
    STRING (260) 11 13
    MAIN (261) 16 19
    WHILE (262) 22
    LOOP (263) 22
    DO (264) 22
    SETQ (265) 9
    SETF (266) 10
    DEFUN (267) 19
    PRINT (268) 11 12
    PRINC (269) 13 14
    AND (270) 33
    OR (271) 34
    NOT (272) 35
    IF (273) 26
    PROGN (274) 15
    MOD (275) 32
    LE (276) 37
    GE (277) 39
    NE (278) 42
    EQ (279) 41


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    axiom (35)
        on left: 1
        on right: 0
    exprSeq (36)
        on left: 3
        on right: 1 4 6
    $@1 (37)
        on left: 2
        on right: 3
    r_exprSeq (38)
        on left: 4 5
        on right: 3
    exprSeqOpt (39)
        on left: 6 7
        on right: 15 19 22
    form (40)
        on left: 8 9 10 11 12 13 14 15 16 17 19 22 23 25
        on right: 3 23 25
    $@2 (41)
        on left: 18
        on right: 19
    $@3 (42)
        on left: 20
        on right: 22
    $@4 (43)
        on left: 21
        on right: 22
    $@5 (44)
        on left: 24
        on right: 25
    ifHead (45)
        on left: 26
        on right: 23 25
    expression (46)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 8 9 10 12 14 22 26 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    operand (47)
        on left: 44 45
        on right: 27
    number (48)
        on left: 46
        on right: 45


State 0

    0 $accept: • axiom $end

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 3

    axiom       go to state 4
    exprSeq     go to state 5
    form        go to state 6
    expression  go to state 7
    operand     go to state 8
    number      go to state 9


State 1

   46 number: NUMBER •

    $default  reduce using rule 46 (number)


State 2

   44 operand: IDENTIF •

    $default  reduce using rule 44 (operand)


State 3

    9 form: '(' • SETQ IDENTIF expression ')'
   10     | '(' • SETF IDENTIF expression ')'
   11     | '(' • PRINT STRING ')'
   12     | '(' • PRINT expression ')'
   13     | '(' • PRINC STRING ')'
   14     | '(' • PRINC expression ')'
   15     | '(' • PROGN exprSeqOpt ')'
   16     | '(' • MAIN ')'
   17     | '(' • IDENTIF ')'
   19     | '(' • DEFUN MAIN $@2 '(' ')' exprSeqOpt ')'
   22     | '(' • LOOP WHILE $@3 expression $@4 DO exprSeqOpt ')'
   23     | '(' • ifHead form ')'
   25     | '(' • ifHead form $@5 form ')'
   28 expression: '(' • '+' expression expression ')'
   29           | '(' • '-' expression expression ')'
   30           | '(' • '*' expression expression ')'
   31           | '(' • '/' expression expression ')'
   32           | '(' • MOD expression expression ')'
   33           | '(' • AND expression expression ')'
   34           | '(' • OR expression expression ')'
   35           | '(' • NOT expression ')'
   36           | '(' • '<' expression expression ')'
   37           | '(' • LE expression expression ')'
   38           | '(' • '>' expression expression ')'
   39           | '(' • GE expression expression ')'
   40           | '(' • '=' expression expression ')'
   41           | '(' • EQ expression expression ')'
   42           | '(' • NE expression expression ')'
   43           | '(' • '-' expression ')'

    IDENTIF  shift, and go to state 10
    MAIN     shift, and go to state 11
    LOOP     shift, and go to state 12
    SETQ     shift, and go to state 13
    SETF     shift, and go to state 14
    DEFUN    shift, and go to state 15
    PRINT    shift, and go to state 16
    PRINC    shift, and go to state 17
    AND      shift, and go to state 18
    OR       shift, and go to state 19
    NOT      shift, and go to state 20
    IF       shift, and go to state 21
    PROGN    shift, and go to state 22
    MOD      shift, and go to state 23
    LE       shift, and go to state 24
    GE       shift, and go to state 25
    NE       shift, and go to state 26
    EQ       shift, and go to state 27
    '+'      shift, and go to state 28
    '-'      shift, and go to state 29
    '*'      shift, and go to state 30
    '/'      shift, and go to state 31
    '<'      shift, and go to state 32
    '>'      shift, and go to state 33
    '='      shift, and go to state 34

    ifHead  go to state 35


State 4

    0 $accept: axiom • $end

    $end  shift, and go to state 36


State 5

    1 axiom: exprSeq •

    $default  reduce using rule 1 (axiom)


State 6

    3 exprSeq: form • $@1 r_exprSeq

    $default  reduce using rule 2 ($@1)

    $@1  go to state 37


State 7

    8 form: expression •

    $default  reduce using rule 8 (form)


State 8

   27 expression: operand •

    $default  reduce using rule 27 (expression)


State 9

   45 operand: number •

    $default  reduce using rule 45 (operand)


State 10

   17 form: '(' IDENTIF • ')'

    ')'  shift, and go to state 38


State 11

   16 form: '(' MAIN • ')'

    ')'  shift, and go to state 39


State 12

   22 form: '(' LOOP • WHILE $@3 expression $@4 DO exprSeqOpt ')'

    WHILE  shift, and go to state 40


State 13

    9 form: '(' SETQ • IDENTIF expression ')'

    IDENTIF  shift, and go to state 41


State 14

   10 form: '(' SETF • IDENTIF expression ')'

    IDENTIF  shift, and go to state 42


State 15

   19 form: '(' DEFUN • MAIN $@2 '(' ')' exprSeqOpt ')'

    MAIN  shift, and go to state 43


State 16

   11 form: '(' PRINT • STRING ')'
   12     | '(' PRINT • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    STRING   shift, and go to state 44
    '('      shift, and go to state 45

    expression  go to state 46
    operand     go to state 8
    number      go to state 9


State 17

   13 form: '(' PRINC • STRING ')'
   14     | '(' PRINC • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    STRING   shift, and go to state 47
    '('      shift, and go to state 45

    expression  go to state 48
    operand     go to state 8
    number      go to state 9


State 18

   33 expression: '(' AND • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 49
    operand     go to state 8
    number      go to state 9


State 19

   34 expression: '(' OR • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 50
    operand     go to state 8
    number      go to state 9


State 20

   35 expression: '(' NOT • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 51
    operand     go to state 8
    number      go to state 9


State 21

   26 ifHead: IF • expression

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 52
    operand     go to state 8
    number      go to state 9


State 22

   15 form: '(' PROGN • exprSeqOpt ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 3

    $default  reduce using rule 7 (exprSeqOpt)

    exprSeq     go to state 53
    exprSeqOpt  go to state 54
    form        go to state 6
    expression  go to state 7
    operand     go to state 8
    number      go to state 9


State 23

   32 expression: '(' MOD • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 55
    operand     go to state 8
    number      go to state 9


State 24

   37 expression: '(' LE • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 56
    operand     go to state 8
    number      go to state 9


State 25

   39 expression: '(' GE • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 57
    operand     go to state 8
    number      go to state 9


State 26

   42 expression: '(' NE • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 58
    operand     go to state 8
    number      go to state 9


State 27

   41 expression: '(' EQ • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 59
    operand     go to state 8
    number      go to state 9


State 28

   28 expression: '(' '+' • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 60
    operand     go to state 8
    number      go to state 9


State 29

   29 expression: '(' '-' • expression expression ')'
   43           | '(' '-' • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 61
    operand     go to state 8
    number      go to state 9


State 30

   30 expression: '(' '*' • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 62
    operand     go to state 8
    number      go to state 9


State 31

   31 expression: '(' '/' • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 63
    operand     go to state 8
    number      go to state 9


State 32

   36 expression: '(' '<' • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 64
    operand     go to state 8
    number      go to state 9


State 33

   38 expression: '(' '>' • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 65
    operand     go to state 8
    number      go to state 9


State 34

   40 expression: '(' '=' • expression expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 66
    operand     go to state 8
    number      go to state 9


State 35

   23 form: '(' ifHead • form ')'
   25     | '(' ifHead • form $@5 form ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 3

    form        go to state 67
    expression  go to state 7
    operand     go to state 8
    number      go to state 9


State 36

    0 $accept: axiom $end •

    $default  accept


State 37

    3 exprSeq: form $@1 • r_exprSeq

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 3

    $default  reduce using rule 5 (r_exprSeq)

    exprSeq     go to state 68
    r_exprSeq   go to state 69
    form        go to state 6
    expression  go to state 7
    operand     go to state 8
    number      go to state 9


State 38

   17 form: '(' IDENTIF ')' •

    $default  reduce using rule 17 (form)


State 39

   16 form: '(' MAIN ')' •

    $default  reduce using rule 16 (form)


State 40

   22 form: '(' LOOP WHILE • $@3 expression $@4 DO exprSeqOpt ')'

    $default  reduce using rule 20 ($@3)

    $@3  go to state 70


State 41

    9 form: '(' SETQ IDENTIF • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 71
    operand     go to state 8
    number      go to state 9


State 42

   10 form: '(' SETF IDENTIF • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 72
    operand     go to state 8
    number      go to state 9


State 43

   19 form: '(' DEFUN MAIN • $@2 '(' ')' exprSeqOpt ')'

    $default  reduce using rule 18 ($@2)

    $@2  go to state 73


State 44

   11 form: '(' PRINT STRING • ')'

    ')'  shift, and go to state 74


State 45

   28 expression: '(' • '+' expression expression ')'
   29           | '(' • '-' expression expression ')'
   30           | '(' • '*' expression expression ')'
   31           | '(' • '/' expression expression ')'
   32           | '(' • MOD expression expression ')'
   33           | '(' • AND expression expression ')'
   34           | '(' • OR expression expression ')'
   35           | '(' • NOT expression ')'
   36           | '(' • '<' expression expression ')'
   37           | '(' • LE expression expression ')'
   38           | '(' • '>' expression expression ')'
   39           | '(' • GE expression expression ')'
   40           | '(' • '=' expression expression ')'
   41           | '(' • EQ expression expression ')'
   42           | '(' • NE expression expression ')'
   43           | '(' • '-' expression ')'

    AND  shift, and go to state 18
    OR   shift, and go to state 19
    NOT  shift, and go to state 20
    MOD  shift, and go to state 23
    LE   shift, and go to state 24
    GE   shift, and go to state 25
    NE   shift, and go to state 26
    EQ   shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '<'  shift, and go to state 32
    '>'  shift, and go to state 33
    '='  shift, and go to state 34


State 46

   12 form: '(' PRINT expression • ')'

    ')'  shift, and go to state 75


State 47

   13 form: '(' PRINC STRING • ')'

    ')'  shift, and go to state 76


State 48

   14 form: '(' PRINC expression • ')'

    ')'  shift, and go to state 77


State 49

   33 expression: '(' AND expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 78
    operand     go to state 8
    number      go to state 9


State 50

   34 expression: '(' OR expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 79
    operand     go to state 8
    number      go to state 9


State 51

   35 expression: '(' NOT expression • ')'

    ')'  shift, and go to state 80


State 52

   26 ifHead: IF expression •

    $default  reduce using rule 26 (ifHead)


State 53

    6 exprSeqOpt: exprSeq •

    $default  reduce using rule 6 (exprSeqOpt)


State 54

   15 form: '(' PROGN exprSeqOpt • ')'

    ')'  shift, and go to state 81


State 55

   32 expression: '(' MOD expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 82
    operand     go to state 8
    number      go to state 9


State 56

   37 expression: '(' LE expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 83
    operand     go to state 8
    number      go to state 9


State 57

   39 expression: '(' GE expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 84
    operand     go to state 8
    number      go to state 9


State 58

   42 expression: '(' NE expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 85
    operand     go to state 8
    number      go to state 9


State 59

   41 expression: '(' EQ expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 86
    operand     go to state 8
    number      go to state 9


State 60

   28 expression: '(' '+' expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 87
    operand     go to state 8
    number      go to state 9


State 61

   29 expression: '(' '-' expression • expression ')'
   43           | '(' '-' expression • ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45
    ')'      shift, and go to state 88

    expression  go to state 89
    operand     go to state 8
    number      go to state 9


State 62

   30 expression: '(' '*' expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 90
    operand     go to state 8
    number      go to state 9


State 63

   31 expression: '(' '/' expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 91
    operand     go to state 8
    number      go to state 9


State 64

   36 expression: '(' '<' expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 92
    operand     go to state 8
    number      go to state 9


State 65

   38 expression: '(' '>' expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 93
    operand     go to state 8
    number      go to state 9


State 66

   40 expression: '(' '=' expression • expression ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 94
    operand     go to state 8
    number      go to state 9


State 67

   23 form: '(' ifHead form • ')'
   25     | '(' ifHead form • $@5 form ')'

    ')'  shift, and go to state 95

    $default  reduce using rule 24 ($@5)

    $@5  go to state 96


State 68

    4 r_exprSeq: exprSeq •

    $default  reduce using rule 4 (r_exprSeq)


State 69

    3 exprSeq: form $@1 r_exprSeq •

    $default  reduce using rule 3 (exprSeq)


State 70

   22 form: '(' LOOP WHILE $@3 • expression $@4 DO exprSeqOpt ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 45

    expression  go to state 97
    operand     go to state 8
    number      go to state 9


State 71

    9 form: '(' SETQ IDENTIF expression • ')'

    ')'  shift, and go to state 98


State 72

   10 form: '(' SETF IDENTIF expression • ')'

    ')'  shift, and go to state 99


State 73

   19 form: '(' DEFUN MAIN $@2 • '(' ')' exprSeqOpt ')'

    '('  shift, and go to state 100


State 74

   11 form: '(' PRINT STRING ')' •

    $default  reduce using rule 11 (form)


State 75

   12 form: '(' PRINT expression ')' •

    $default  reduce using rule 12 (form)


State 76

   13 form: '(' PRINC STRING ')' •

    $default  reduce using rule 13 (form)


State 77

   14 form: '(' PRINC expression ')' •

    $default  reduce using rule 14 (form)


State 78

   33 expression: '(' AND expression expression • ')'

    ')'  shift, and go to state 101


State 79

   34 expression: '(' OR expression expression • ')'

    ')'  shift, and go to state 102


State 80

   35 expression: '(' NOT expression ')' •

    $default  reduce using rule 35 (expression)


State 81

   15 form: '(' PROGN exprSeqOpt ')' •

    $default  reduce using rule 15 (form)


State 82

   32 expression: '(' MOD expression expression • ')'

    ')'  shift, and go to state 103


State 83

   37 expression: '(' LE expression expression • ')'

    ')'  shift, and go to state 104


State 84

   39 expression: '(' GE expression expression • ')'

    ')'  shift, and go to state 105


State 85

   42 expression: '(' NE expression expression • ')'

    ')'  shift, and go to state 106


State 86

   41 expression: '(' EQ expression expression • ')'

    ')'  shift, and go to state 107


State 87

   28 expression: '(' '+' expression expression • ')'

    ')'  shift, and go to state 108


State 88

   43 expression: '(' '-' expression ')' •

    $default  reduce using rule 43 (expression)


State 89

   29 expression: '(' '-' expression expression • ')'

    ')'  shift, and go to state 109


State 90

   30 expression: '(' '*' expression expression • ')'

    ')'  shift, and go to state 110


State 91

   31 expression: '(' '/' expression expression • ')'

    ')'  shift, and go to state 111


State 92

   36 expression: '(' '<' expression expression • ')'

    ')'  shift, and go to state 112


State 93

   38 expression: '(' '>' expression expression • ')'

    ')'  shift, and go to state 113


State 94

   40 expression: '(' '=' expression expression • ')'

    ')'  shift, and go to state 114


State 95

   23 form: '(' ifHead form ')' •

    $default  reduce using rule 23 (form)


State 96

   25 form: '(' ifHead form $@5 • form ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 3

    form        go to state 115
    expression  go to state 7
    operand     go to state 8
    number      go to state 9


State 97

   22 form: '(' LOOP WHILE $@3 expression • $@4 DO exprSeqOpt ')'

    $default  reduce using rule 21 ($@4)

    $@4  go to state 116


State 98

    9 form: '(' SETQ IDENTIF expression ')' •

    $default  reduce using rule 9 (form)


State 99

   10 form: '(' SETF IDENTIF expression ')' •

    $default  reduce using rule 10 (form)


State 100

   19 form: '(' DEFUN MAIN $@2 '(' • ')' exprSeqOpt ')'

    ')'  shift, and go to state 117


State 101

   33 expression: '(' AND expression expression ')' •

    $default  reduce using rule 33 (expression)


State 102

   34 expression: '(' OR expression expression ')' •

    $default  reduce using rule 34 (expression)


State 103

   32 expression: '(' MOD expression expression ')' •

    $default  reduce using rule 32 (expression)


State 104

   37 expression: '(' LE expression expression ')' •

    $default  reduce using rule 37 (expression)


State 105

   39 expression: '(' GE expression expression ')' •

    $default  reduce using rule 39 (expression)


State 106

   42 expression: '(' NE expression expression ')' •

    $default  reduce using rule 42 (expression)


State 107

   41 expression: '(' EQ expression expression ')' •

    $default  reduce using rule 41 (expression)


State 108

   28 expression: '(' '+' expression expression ')' •

    $default  reduce using rule 28 (expression)


State 109

   29 expression: '(' '-' expression expression ')' •

    $default  reduce using rule 29 (expression)


State 110

   30 expression: '(' '*' expression expression ')' •

    $default  reduce using rule 30 (expression)


State 111

   31 expression: '(' '/' expression expression ')' •

    $default  reduce using rule 31 (expression)


State 112

   36 expression: '(' '<' expression expression ')' •

    $default  reduce using rule 36 (expression)


State 113

   38 expression: '(' '>' expression expression ')' •

    $default  reduce using rule 38 (expression)


State 114

   40 expression: '(' '=' expression expression ')' •

    $default  reduce using rule 40 (expression)


State 115

   25 form: '(' ifHead form $@5 form • ')'

    ')'  shift, and go to state 118


State 116

   22 form: '(' LOOP WHILE $@3 expression $@4 • DO exprSeqOpt ')'

    DO  shift, and go to state 119


State 117

   19 form: '(' DEFUN MAIN $@2 '(' ')' • exprSeqOpt ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 3

    $default  reduce using rule 7 (exprSeqOpt)

    exprSeq     go to state 53
    exprSeqOpt  go to state 120
    form        go to state 6
    expression  go to state 7
    operand     go to state 8
    number      go to state 9


State 118

   25 form: '(' ifHead form $@5 form ')' •

    $default  reduce using rule 25 (form)


State 119

   22 form: '(' LOOP WHILE $@3 expression $@4 DO • exprSeqOpt ')'

    NUMBER   shift, and go to state 1
    IDENTIF  shift, and go to state 2
    '('      shift, and go to state 3

    $default  reduce using rule 7 (exprSeqOpt)

    exprSeq     go to state 53
    exprSeqOpt  go to state 121
    form        go to state 6
    expression  go to state 7
    operand     go to state 8
    number      go to state 9


State 120

   19 form: '(' DEFUN MAIN $@2 '(' ')' exprSeqOpt • ')'

    ')'  shift, and go to state 122


State 121

   22 form: '(' LOOP WHILE $@3 expression $@4 DO exprSeqOpt • ')'

    ')'  shift, and go to state 123


State 122

   19 form: '(' DEFUN MAIN $@2 '(' ')' exprSeqOpt ')' •

    $default  reduce using rule 19 (form)


State 123

   22 form: '(' LOOP WHILE $@3 expression $@4 DO exprSeqOpt ')' •

    $default  reduce using rule 22 (form)
